<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de Usuario Loggueado</string>
    <string name="nav_header_subtitle">N° Caja</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--Menu de inicio-->
    <string name="menu_pdv">Punto de venta</string>
    <string name="menu_articulos">Artículos</string>
    <string name="menu_caja">Movimientos de caja</string>
    <string name="menu_documentos">Tickets</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_impresora">Impresora</string>
    <string name="menu_integradores">Integradores</string>
    <string name="menu_encabezado">Menú Principal</string>
    <string name="menu_listaArticulo">Lista de Artículos</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <string name="menu_mantenimiento">Mantenimiento</string>
    <string name="Error">¡Error!</string>
    <string name="Atencion">¡Atención!</string>

    <string-array name="EstadosServicios">
        <item>PENDIENTE</item>
        <item>FINALIZADOS</item>
        <item>CANCELADAS</item>
    </string-array>

    <!--SHARED PREFERENCES-->
    <string name="_sharedPreferences">preferencias</string>
    <string name="_nrocaja">nrocaja</string>
    <string name="_direccionserver">direccionserver</string>
    <string name="_tipo_impresora">tipo_impresora</string>
    <string name="_mac">MAC</string>
    <string name="_configuracion_impresora">seconfiguro</string>

    <string name="_totalPesos">Efectivo</string>
    <string name="_totalDolares">Efectivo</string>
    <string name="_totalTarjetas">Tarjetas</string>
    <string name="_totalTarjetasDolares">Tarjetas</string>
    <string name="_totalCheques">Cheques</string>
    <string name="_totalChequesDolares">Cheques</string>
    <string name="_totalCreditos">Creditos</string>
    <string name="_totalTickets">Tickets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>