<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/menuPrincipalFragment">

    <fragment
        android:id="@+id/nav_cajaFragment"
        android:name="com.devhyc.easypos.ui.caja.CajaFragment"
        android:label="@string/menu_caja"
        tools:layout="@layout/fragment_caja" >
        <action
            android:id="@+id/action_IngresoR"
            app:destination="@id/ingresoRetiroFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/nav_cajaFragment">
            <argument
                android:name="TipoMovimiento"
                android:defaultValue="0" />
        </action>
        <action
            android:id="@+id/action_ReporteCaja"
            app:destination="@id/reporteDeCajaFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_cajaFragment" >
            <argument
                android:name="NroCaja" />
        </action>
        <action
            android:id="@+id/action_CierreCaja"
            app:destination="@id/cierreCajaFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_cajaFragment" />
    </fragment>
    <fragment
        android:id="@+id/ingresoRetiroFragment"
        android:name="com.devhyc.easypos.ui.ingresoretiro.IngresoRetiroFragment"
        android:label="fragment_ingreso_retiro"
        tools:layout="@layout/fragment_ingreso_retiro" >
        <argument
            android:name="TipoMovimiento"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/cierreCajaFragment"
        android:name="com.devhyc.easypos.ui.cierrecaja.CierreCajaFragment"
        android:label="Cierre de caja"
        tools:layout="@layout/fragment_cierre_caja">
        <argument
            android:name="Tipo"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/cabezalFragment"
        android:name="com.devhyc.easypos.ui.cabezal.CabezalFragment"
        android:label="Cliente"
        tools:layout="@layout/fragment_cabezal" />
    <fragment
        android:id="@+id/listaDeArticulosFragment"
        android:name="com.devhyc.easypos.ui.articulos.ListaDeArticulosFragment"
        android:label="@string/menu_listaArticulo"
        tools:layout="@layout/fragment_lista_de_articulos" >
        <argument
            android:name="rubros"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/configuracionDeCajaFragment"
        android:name="com.devhyc.easypos.ui.configuracion.ConfiguracionDeCajaFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion_de_caja" />
    <fragment
        android:id="@+id/menuPrincipalFragment"
        android:name="com.devhyc.easypos.ui.menuprincipal.MenuPrincipalFragment"
        android:label="Menu Principal"
        tools:layout="@layout/fragment_menu_principal">
        <action
            android:id="@+id/action_menuPrincipalFragment_to_nav_cajaFragment"
            app:destination="@id/nav_cajaFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/menuPrincipalFragment" />
        <action
            android:id="@+id/action_menuPrincipalFragment_to_configuracionDeCajaFragment"
            app:destination="@id/configuracionDeCajaFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/menuPrincipalFragment" />
        <action
            android:id="@+id/action_menuPrincipalFragment_to_conexionImpresora"
            app:destination="@id/conexionImpresora"
            app:launchSingleTop="true"
            app:popUpTo="@id/menuPrincipalFragment" />
        <action
            android:id="@+id/action_menuPrincipalFragment_to_masOpcionesFragment"
            app:destination="@id/masOpcionesFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/menuPrincipalFragment" />
        <action
            android:id="@+id/action_menuPrincipalFragment_to_listaDeDocumentosFragment"
            app:destination="@id/listaDeDocumentosFragment" />
        <action
            android:id="@+id/action_menuPrincipalFragment_to_documentoPrincipalFragment"
            app:destination="@id/documentoPrincipalFragment"
            app:popUpTo="@id/menuPrincipalFragment" />
        <action
            android:id="@+id/action_menuPrincipalFragment_to_menuMantenimientoFragment"
            app:destination="@id/menuMantenimientoFragment"
            app:popUpTo="@id/menuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/conexionImpresora"
        android:name="com.devhyc.easypos.ui.impresora.ConexionImpresora"
        android:label="@string/menu_impresora" />
    <fragment
        android:id="@+id/reporteDeCajaFragment"
        android:name="com.devhyc.easypos.ui.reportecaja.ReporteDeCajaFragment"
        android:label="Reporte de caja"
        tools:layout="@layout/fragment_reporte_de_caja" >
        <argument
            android:name="NroCaja"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/documentoVistaFragment"
        android:name="com.devhyc.easypos.ui.documentovista.DocumentoVistaFragment"
        android:label="Ticket Vista"
        tools:layout="@layout/fragment_documento_vista" >
        <argument
            android:name="terminal"
            app:argType="string" />
        <argument
            android:name="tipodoc"
            app:argType="string" />
        <argument
            android:name="nrodoc"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/masOpcionesFragment"
        android:name="com.devhyc.easypos.ui.masopciones.MasOpcionesFragment"
        android:label="Integradores"
        tools:layout="@layout/fragment_mas_opciones" />
    <fragment
        android:id="@+id/listaDeDocumentosFragment"
        android:name="com.devhyc.easypos.ui.listadodocumentos.ListaDeDocumentosFragment"
        android:label="@string/menu_documentos"
        tools:layout="@layout/fragment_lista_de_documentos">
        <action
            android:id="@+id/action_listaDeDocumentosFragment_to_documentoVistaFragment"
            app:destination="@id/documentoVistaFragment" />
    </fragment>
    <fragment
        android:id="@+id/documentoPrincipalFragment"
        android:name="com.devhyc.easypos.ui.documento.DocumentoPrincipalFragment"
        android:label="fragment_documento_principal"
        tools:layout="@layout/fragment_documento_principal" >
        <action
            android:id="@+id/action_documentoPrincipalFragment_to_cabezalFragment"
            app:destination="@id/cabezalFragment" />
        <action
            android:id="@+id/action_documentoPrincipalFragment_to_listaDeArticulosFragment"
            app:destination="@id/listaDeArticulosFragment" />
        <action
            android:id="@+id/action_documentoPrincipalFragment_to_mediosDePagoFragment"
            app:destination="@id/mediosDePagoFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/documentoPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/mediosDePagoFragment"
        android:name="com.devhyc.easypos.ui.mediospagos.MediosDePagoFragment"
        android:label="Medios de pago"
        tools:layout="@layout/fragment_medios_de_pago">
    </fragment>
    <fragment
        android:id="@+id/menuMantenimientoFragment"
        android:name="com.devhyc.easypos.ui.menumantenimiento.MenuMantenimientoFragment"
        android:label="Mantenimiento"
        tools:layout="@layout/fragment_menu_mantenimiento" >
        <action
            android:id="@+id/action_menuMantenimientoFragment_to_listaDeArticulosFragment"
            app:destination="@id/listaDeArticulosFragment"
            app:popUpTo="@id/menuMantenimientoFragment" />
        <action
            android:id="@+id/action_menuMantenimientoFragment_to_listaClientesFragment"
            app:destination="@id/listaClientesFragment"
            app:popUpTo="@id/menuMantenimientoFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaClientesFragment"
        android:name="com.devhyc.easypos.ui.clientes.listado.ListaClientesFragment"
        android:label="Lista de clientes"
        tools:layout="@layout/fragment_lista_clientes" />
</navigation>